--- a/css/main.css
+++ b/css/main.css
@@ -976,14 +976,14 @@ img {
   padding-bottom: 94px;
 }
 
-.buttons__list {
+.filters__list {
   display: flex;
   justify-content: center;
   margin-top: 0px;
   margin-bottom: 34px;
 }
 
-.button__item {
+.filters__btn {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.6;
@@ -998,13 +998,13 @@ img {
   transition-property: color, background, box-shadow;
 }
 
-.button__item:hover, .button__item:focus {
+.filters__btn:hover, .filters__btn:focus {
   color: #fff;
   background: #2196f3;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.button__item--gap:not(:last-child) {
+.filters__item:not(:last-child) {
   margin-right: 8px;
 }
 
@@ -1069,13 +1069,13 @@ img {
 }
 
 /*переходи і анімація*/
-.owerbox {
+.project__thumb {
   display: inline-block;
   position: relative;
   overflow: hidden;
 }
 
-.project__thumb {
+.project__owerlay {
   display: inline-block;
   position: absolute;
   opacity: 0;
@@ -1087,12 +1087,13 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+/*
 .project__owerlay {
   transition: box-shadow;
 }
-
-.project__link:hover .project__thumb,
-.project__link:focus .project__thumb {
+*/
+.project__link:hover .project__owerlay,
+.project__link:focus .project__owerlay {
   transform: translateY(0);
   opacity: 1;
 }
