--- a/sass/layout/_portfolio-buttons.scss
+++ b/sass/layout/_portfolio-buttons.scss
@@ -1,10 +1,10 @@
-.buttons__list {
+.filters__list {
   display: flex;
   justify-content: center;
   margin-top: 0px;
   margin-bottom: 34px;
 }
-.button__item {
+.filters__btn {
   @include font(16px, 500, 1.6);
   background: $button-nav-color;
   font-family: "Roboto", sans-serif;
@@ -23,7 +23,7 @@
           0px 2px 2px rgba(0, 0, 0, 0.12);
     }
 }
-.button__item--gap:not(:last-child) {
+.filters__item:not(:last-child) {
   margin-right: 8px;
 }
   
