--- a/sass/layout/_portfolio-projects.scss
+++ b/sass/layout/_portfolio-projects.scss
@@ -26,7 +26,7 @@
   padding-top: 20px;
   padding-bottom: 20px;
   padding-left: 24px;
-    padding-right: 24px;
+  padding-right: 24px;
 }
 .pack > .pack__title {
   margin-top: 0px;
@@ -51,12 +51,12 @@
   flex-basis: 322px;
 }
   /*переходи і анімація*/
-.owerbox {
+.project__thumb {
   display: inline-block;
   position: relative;
   overflow: hidden;
 }
-.project__thumb {
+.project__owerlay {
   display: inline-block;
   position: absolute;
   opacity: 0;
@@ -68,11 +68,13 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
   opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .project__owerlay {
   transition: box-shadow;
 }
-.project__link:hover .project__thumb,
-.project__link:focus .project__thumb {
+
+.project__link:hover .project__owerlay,
+.project__link:focus .project__owerlay {
   transform: translateY(0);
   opacity: 1;
 }
